<resources>
    <string name="app_name">Transaction Book</string>
    <!-- Pages' Name-->
    <string name="page_transaction_home">@string/app_name</string>
    <string name="page_transactions">Transactions</string>
    <string name="page_welcome">@string/app_name</string>

    <!-- Pages' Name-->
    <string name="welcome_msg">Hi! I am your Personal Accountant!\n You can call me PA!</string>
    <string name="account_open_msg">Open New Account!</string>
    <string name="account_open_phone_display">Type Account Person Phone</string>
    <string name="account_open_name_display">Type Account Person Name</string>
    <string name="title_activity_account_list">Accounts</string>
    <string name="title_activity_transaction_list">Previous Transactions</string>
    <string name="giver_label">Giver</string>
    <string name="taker_label">Taker</string>
    <string name="transaction_type_give">Give</string>
    <string name="transaction_type_take">Take</string>
    <string name="transaction_attr_amount">Amount</string>
    <string name="description_label">Description</string>
    <string name="button_transaction_add">Add</string>
    <string name="transaction_type_passive_given">Given To</string>
    <string name="transaction_type_passive_taken">Taken From</string>
    <string name="account_attr_phone">Phone</string>
    <string name="account_attr_name">Name</string>
    <string name="amount_label">Amount</string>
    <string name="author">DPK-Solutions</string>
    <string name="pull_to_refresh">Pull to Refresh!</string>
    <string name="person">Person</string>
    <string name="account_open_amount_display">Enter Amount</string>
    <string name="transaction_type_passive_taken_amount">Taken Amount</string>
    <string name="transaction_type_passive_given_amount">Given Amount</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="transaction_description">Description</string>
    <string name="account_open_description_display">Type Descrition of Transaction</string>
    <string name="account_net_amount">Net Amount</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Phone</string>
    <string name="nav_header_subtitle">Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_add_account">Add Account</string>
    <string name="menu_new_transaction">New Transaction</string>
    <string name="page_account_open">Add New Account</string>
    <string name="page_transaction_add">Add New Transaction</string>
    <string name="page_transaction_aboutDev">About Developer(s)</string>
    <string name="choose_your_language">Choose Language</string>
    <string name="bangla">Bangla</string>
    <string name="english">English</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="account_open">Done</string>
    <string name="accounts_breakdown">Accounts Breakdown</string>
    <string name="transactions_breakdown">Transactions Breakdown</string>


    <string name="warning_transaction_add_entry">Please enter Amount and Description Correctly!</string>
    <string name="warning_account_open_phone_name_entry">Please enter Phone and Name Correctly!</string>
    <string name="warning_account_open_phone_entry">Please enter Phone Correctly!</string>
    <string name="warning_account_open_name_entry">\"Please enter Name Correctly!</string>
    <string name="warning_account_open_amount_entry">\"Please enter Amount Correctly!</string>
    <string name="error_msg">Error Message</string>
    <string name="search_hint">Number or Name</string>
    <string name="search">Search</string>
    <string name="page_about_search">App Search</string>
    <string name="account_exist">Already account with same phone number</string>
    <string name="unknown_error">Unkown Error!</string>
    <string name="pick_date">Pick Time</string>
    <string name="transaction_time_now">Now</string>
    <string name="transaction_time_another_time">Not Now</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="tap_exit">Tap back button again in order to exit</string>
    <string name="register">Open</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="account_open_phone_own_hint">Type your Phone Number</string>
    <string name="account_open_name_own_hint">Type your Name</string>
    <string name="net_transactions">Net Transactions</string>

</resources>
