<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_64"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_add_account"
            android:icon="@drawable/add_user_64"
            android:title="@string/menu_add_account" />
        <item
            android:id="@+id/nav_new_transaction"
            android:icon="@drawable/transaction_64"
            android:title="@string/menu_new_transaction" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/information_64"
            android:title="@string/menu_about_us" />
    </group>

</menu>
