<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="com.dpk.pa.pages.TransactionAddActivity">
    <include
        android:id="@+id/transaction_add_progress_view"
        layout="@layout/view_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="100dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Transaction Type"
            android:layout_weight="1.25"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rg_transaction_add_type"
            android:checkedButton="@+id/rb_transaction_add_type_given"
            android:orientation="horizontal"
            android:layout_weight="1.75">
            <RadioButton
                android:id="@+id/rb_transaction_add_type_given"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_type_passive_given"/>
            <RadioButton
                android:id="@+id/rb_transaction_add_type_taken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_type_passive_taken"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:weightSum="2">
        <TextView
            android:id="@+id/text_view_transaction_add_spinner_person_label"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/person"/>
        <Spinner
            android:id="@+id/spinner_transaction_add_person"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="1.00"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/edit_text_transaction_add_amount"
            android:hint="@string/account_open_amount_display"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="100dp"
            android:inputType="textMultiLine"
            android:id="@+id/edit_text_transaction_add_description"
            android:isScrollContainer="true"
            android:hint="@string/account_open_description_display"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_transaction_add_add"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_transaction_add"
        android:drawableLeft="@drawable/plus_green"
        android:layout_gravity="center"
        />

</LinearLayout>