<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_account_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/card_account_corner_radius">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
            layout="@layout/horizontal_line"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="4">
            <LinearLayout
                android:id="@+id/date"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:weightSum="2">
                <TextView
                    android:id="@+id/text_view_card_transaction_date"
                    android:layout_width="@dimen/card_account_phone"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/transaction_date"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Give"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:orientation="vertical"
                android:weightSum="2"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/text_view_card_transaction_giver_label"
                    android:layout_width="@dimen/card_account_deposit_label"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/transaction_type_passive_given"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/text_view_card_transaction_given_amount"
                    android:layout_width="@dimen/card_account_deposit"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/transaction_type_passive_given_amount"
                    android:textColor="@color/green"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Taker"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:orientation="vertical"
                android:weightSum="2"
                android:layout_gravity="center"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/text_view_card_transaction_taker_label"
                    android:layout_width="@dimen/card_account_due_label"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/transaction_type_passive_taken"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/text_view_card_transaction_taken_amount"
                    android:layout_width="@dimen/card_account_due"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/red"
                    android:text="@string/transaction_type_passive_taken_amount"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:orientation="vertical"
                android:weightSum="2"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1.0"
                    android:text="@string/transaction_description"
                    android:id="@+id/text_view_card_transaction_description"/>
            </LinearLayout>
        </LinearLayout>
        <include
            layout="@layout/horizontal_line"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>
