<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dpk.pa.fragment.TransactionTakenFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="4">

        <include
            android:id="@+id/progress_view_fragment_transaction_taken"
            layout="@layout/view_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone">
        </include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="100dp"
            android:weightSum="2">
            <TextView
                android:id="@+id/text_view_transaction_add_spinner_giver_label"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/giver_label" />

            <Spinner
                android:id="@+id/spinner_fragment_transaction_taken"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1.25" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_fragment_transaction_taken_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_open_amount_display"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_fragment_transaction_taken_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_open_description_display"
                android:inputType="textMultiLine"
                android:isScrollContainer="true"
                android:maxHeight="100dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_fragment_transaction_taken_add"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/plus_green"
            android:text="@string/button_transaction_add" />

    </LinearLayout>


</FrameLayout>
