<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_account_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/card_account_height"
        card_view:cardCornerRadius="@dimen/card_account_corner_radius">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <include
        layout="@layout/horizontal_line"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3">
        <LinearLayout
            android:id="@+id/phone_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                android:id="@+id/text_view_card_account_phone"
                android:layout_width="@dimen/card_account_phone"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/account_attr_phone" />

            <TextView
                android:id="@+id/text_view_card_account_name"
                android:layout_width="@dimen/card_account_name"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/account_attr_name" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/give_value"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_weight="1">

            <TextView
                android:id="@+id/text_view_card_account_given_to_label"
                android:layout_width="@dimen/card_account_deposit_label"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/transaction_type_passive_given" />

            <TextView
                android:id="@+id/text_view_card_account_given_to"
                android:layout_width="@dimen/card_account_deposit"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/transaction_type_passive_given" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/due_value"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/text_view_card_account_taken_from_label"
                android:layout_width="@dimen/card_account_due_label"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/transaction_type_passive_taken" />

            <TextView
                android:id="@+id/text_view_card_account_taken_from"
                android:layout_width="@dimen/card_account_due"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/transaction_type_passive_taken" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:weightSum="2">
            <TextView
                android:layout_width="@dimen/card_account_due_label"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Net Amount"/>
            <TextView
                android:layout_width="@dimen/card_account_due"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/text_view_card_account_account_amount_net"
                android:text="@string/account_net_amount"/>
        </LinearLayout>
        <ImageButton
            android:id="@+id/button_card_account_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_arrow"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            />
    </LinearLayout>
        <include
            layout="@layout/horizontal_line"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>
