<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dpk.pa.pages.AccountOpenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="@dimen/page_margin"
        android:weightSum="3">
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_welcome_message"
            android:text="@string/account_open_msg"
            android:layout_weight="1"
            />
        <LinearLayout
            android:id="@+id/account_open_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:weightSum="3"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/phone_number_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_open_phone_display"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/edit_text_phone_number_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="Phone Number"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/name_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_open_name_display"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/edit_text_name_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:hint="Name"/>
            </LinearLayout>
            <Button
                android:layout_gravity="center"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:id="@+id/button_open"
                android:layout_weight="1"
                android:text="OPEN"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
