<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_account_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_account_height"
        card_view:cardCornerRadius="@dimen/card_account_corner_radius">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
            layout="@layout/text_horizontal_line"
            android:id="@+id/text_horizontal_line_account_list_transactions_net"
            android:layout_below="@+id/app_bar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3">
        <LinearLayout
            android:id="@+id/give_value"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_weight="1">

            <TextView
                android:id="@+id/text_view_card_transaction_net_given_to_label"
                android:layout_width="@dimen/card_account_deposit_label"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/transaction_type_passive_given" />

            <TextView
                android:id="@+id/text_view_card_transaction_net_given_to"
                android:layout_width="@dimen/card_account_deposit"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/green"
                android:text="@string/transaction_type_passive_given" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/due_value"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/text_view_card_transaction_net_taken_from_label"
                android:layout_width="@dimen/card_account_due_label"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/transaction_type_passive_taken" />

            <TextView
                android:id="@+id/text_view_card_transaction_net_taken_from"
                android:layout_width="@dimen/card_account_due"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/transaction_type_passive_taken" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:weightSum="2">
            <TextView
                android:layout_width="@dimen/card_account_due_label"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Net Amount"/>
            <TextView
                android:layout_width="@dimen/card_account_due"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/text_view_card_transaction_net_account_amount_net"
                android:text="@string/account_net_amount"/>
        </LinearLayout>
    </LinearLayout>
        <include
            layout="@layout/horizontal_line"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>
